wip(landing pages/forms): placeholder, cellphone's checkbox, layout and elements

--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -19,6 +19,9 @@
     background-repeat: no-repeat;
 }
 
+.checkbox {
+    margin: 15px auto 0 auto;
+}
 .checkbox input[type="checkbox"] {
     opacity: 0;
 }
@@ -159,6 +162,9 @@ body {
     color: #fff !important;
     option {
         color: #000000;
+        &:hover {
+            color:Red;
+        }
     }
 }
 
@@ -190,16 +196,17 @@ select:focus {
 .select-dropdown div.input-group-prepend>div {
     border-bottom: 0;
 }
+
 .label-experience {
     padding: 10px 0 10px 15px;
 }
 
-.form-checkbox-select{
-    padding:15px 0 10px 0;
-    display:flex;
+.form-checkbox-select {
+    padding: 15px 0 10px 0;
+    display: flex;
     justify-content: space-around;
     flex-wrap: nowrap;
-    background-color: rgba(0,0,0,.3);
+    background-color: rgba(0, 0, 0, .3);
     label {
         display: inline-block;
         padding-left: 5px;
@@ -270,20 +277,24 @@ _:-o-prefocus,
             }
         }
         input::-webkit-input-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic;
         }
         input:-moz-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic;
         }
         input::-moz-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic;
         }
         input:-ms-input-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic;
         }
     }
     &.gt {
@@ -294,20 +305,24 @@ _:-o-prefocus,
             color: #fff
         }
         input::-webkit-input-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic;
         }
         input:-moz-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic;
         }
         input::-moz-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic;
         }
         input:-ms-input-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic;
         }
     }
 }
@@ -442,12 +457,12 @@ section.header h1 {
     width: 100%;
     box-sizing: border-box;
     padding: 15px;
-    font-size: 14px;
+    font-size: 13px;
     background-color: rgba(255, 255, 255, .3)
 }
 
 .forms {
-    margin-bottom: 40px;
+    margin-bottom: 15px;
 }
 
 .form-group {
@@ -488,33 +503,37 @@ section.header h1 {
 }
 
 input::-webkit-input-placeholder {
-    font-size: 16px;
+    font-size: 13px;
     font-weight: lighter;
     text-align: right;
     padding-right: 30px;
+    font-style: italic;
 }
 
 input:-moz-placeholder {
     /* Firefox 18- */
-    font-size: 16px;
+    font-size: 13px;
     font-weight: lighter;
     text-align: right;
     padding-right: 30px;
+    font-style: italic;
 }
 
 input::-moz-placeholder {
     /* Firefox 19+ */
-    font-size: 16px;
+    font-size: 13px;
     font-weight: lighter;
     text-align: right;
     padding-right: 30px;
+    font-style: italic;
 }
 
 input:-ms-input-placeholder {
-    font-size: 16px;
+    font-size: 13px;
     font-weight: lighter;
     text-align: right;
     padding-right: 30px;
+    font-style: italic;
 }
 
 input[type=text],
@@ -901,7 +920,6 @@ label {
         font-size: 25px;
         margin-top: 10px;
     }
-
     .form-checkbox-select {
         flex-direction: column;
         padding: 20px 10px 10px 15px;
@@ -934,22 +952,18 @@ label {
             }
             input::-webkit-input-placeholder {
                 font-size: 12px !important;
-                font-weight: bold;
                 color: #fff
             }
             input:-moz-placeholder {
                 font-size: 12px !important;
-                font-weight: bold;
                 color: #fff
             }
             input::-moz-placeholder {
                 font-size: 12px !important;
-                font-weight: bold;
                 color: #fff
             }
             input:-ms-input-placeholder {
                 font-size: 12px !important;
-                font-weight: bold;
                 color: #fff
             }
         }
@@ -988,7 +1002,6 @@ label {
     input::-webkit-input-placeholder {
         color: #fff !important;
         font-size: 12px;
-        font-weight: bold;
         text-align: right;
         padding-right: 0;
     }
@@ -996,7 +1009,6 @@ label {
         /* Firefox 18- */
         color: #fff !important;
         font-size: 12px;
-        font-weight: bold;
         text-align: right;
         padding-right: 0;
     }
@@ -1004,14 +1016,12 @@ label {
         /* Firefox 19+ */
         color: #fff !important;
         font-size: 12px;
-        font-weight: bold;
         text-align: right;
         padding-right: 0;
     }
     input:-ms-input-placeholder {
         color: #fff !important;
         font-size: 12px;
-        font-weight: bold;
         text-align: right;
         padding-right: 0;
     }
@@ -1026,7 +1036,7 @@ label {
         text-align: right;
     }
     .input-group-text {
-        font-size: 14px;
+        font-size: 13px;
         font-weight: 400;
         line-height: 18px;
     }
@@ -1055,23 +1065,19 @@ label {
                 }
             }
             input::-webkit-input-placeholder {
-                font-size: 14px !important;
-                font-weight: bold;
+                font-size: 13px !important;
                 color: #fff
             }
             input:-moz-placeholder {
-                font-size: 14px !important;
-                font-weight: bold;
+                font-size: 13px !important;
                 color: #fff
             }
             input::-moz-placeholder {
-                font-size: 14px !important;
-                font-weight: bold;
+                font-size: 13px !important;
                 color: #fff
             }
             input:-ms-input-placeholder {
-                font-size: 14px !important;
-                font-weight: bold;
+                font-size: 13px !important;
                 color: #fff
             }
         }
@@ -1123,7 +1129,6 @@ label {
         margin: auto;
     }
     #step3 h2 {
-        font-weight: bold;
         font-size: 44px;
         margin-bottom: 20px;
         padding: 0 34px;
@@ -1194,31 +1199,27 @@ label {
     /* Placeholder Dropdown */
     input::-webkit-input-placeholder {
         color: #fff !important;
-        font-size: 14px;
-        font-weight: bold;
+        font-size: 13px;
         text-align: left;
         padding-right: 0;
     }
     input:-moz-placeholder {
         /* Firefox 18- */
         color: #fff !important;
-        font-size: 14px;
-        font-weight: bold;
+        font-size: 13px;
         text-align: left;
         padding-right: 0;
     }
     input::-moz-placeholder {
         /* Firefox 19+ */
         color: #fff !important;
-        font-size: 14px;
-        font-weight: bold;
+        font-size: 13px;
         text-align: left;
         padding-right: 0;
     }
     input:-ms-input-placeholder {
         color: #fff !important;
-        font-size: 14px;
-        font-weight: bold;
+        font-size: 13px;
         text-align: left;
         padding-right: 0;
     }
