--- a/src/app/form-gt/form-gt.component.scss
+++ b/src/app/form-gt/form-gt.component.scss
@@ -5,7 +5,7 @@
         margin-bottom: 5px;
     }
     .forms-tem-accepted {
-        font-size: 12px;
+        font-size: 13px;
         display: block;
         margin: 0 auto 15px auto;
         text-align: center;
@@ -17,6 +17,10 @@
     background-size: 50%;
     background-position: center center;
     background-repeat: no-repeat;
+}
+
+.checkbox {
+    margin: 15px auto 0 auto;
 }
 
 .checkbox input[type="checkbox"] {
@@ -190,16 +194,17 @@ select:focus {
 .select-dropdown div.input-group-prepend>div {
     border-bottom: 0;
 }
+
 .label-experience {
     padding: 10px 0 10px 15px;
 }
 
-.form-checkbox-select{
-    padding:15px 0 10px 0;
-    display:flex;
+.form-checkbox-select {
+    padding: 15px 0 10px 0;
+    display: flex;
     justify-content: space-around;
     flex-wrap: nowrap;
-    background-color: rgba(0,0,0,.3);
+    background-color: rgba(0, 0, 0, .3);
     label {
         display: inline-block;
         padding-left: 5px;
@@ -215,7 +220,7 @@ select:focus {
 .fa-sort-desc {
     position: absolute;
     top: 0;
-    right: 12px;
+    right: 13px;
     font-size: 24px;
 }
 
@@ -254,7 +259,7 @@ _:-o-prefocus,
     text-align: right;
     margin: 0;
     min-width: 400px;
-    padding: 10px 30px 6px 12px;
+    padding: 10px 30px 6px 13px;
 }
 
 ::ng-deep .p-inputMask {
@@ -270,44 +275,51 @@ _:-o-prefocus,
             }
         }
         input::-webkit-input-placeholder {
-            font-size: 16px !important;
+            font-size: 13px !important;
             color: #fff
         }
         input:-moz-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic
         }
         input::-moz-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic
         }
         input:-ms-input-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic
         }
     }
     &.gt {
         input {
-            font-size: 16px;
+            font-size: 13px;
             font-weight: lighter;
             font-family: "Lato", sans-serif;
             color: #fff
         }
         input::-webkit-input-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic
         }
         input:-moz-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic
         }
         input::-moz-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic
         }
         input:-ms-input-placeholder {
-            font-size: 16px !important;
-            color: #fff
+            font-size: 13px !important;
+            color: #fff;
+            font-style: italic
         }
     }
 }
@@ -442,12 +454,12 @@ section.header h1 {
     width: 100%;
     box-sizing: border-box;
     padding: 15px;
-    font-size: 14px;
+    font-size: 13px;
     background-color: rgba(255, 255, 255, .3)
 }
 
 .forms {
-    margin-bottom: 40px;
+    margin-bottom: 15px;
 }
 
 .form-group {
@@ -804,7 +816,7 @@ label {
 
 .modal label {
     font-weight: normal;
-    font-size: 12px;
+    font-size: 13px;
     margin-top: 10px;
     margin-bottom: 0;
 }
@@ -828,7 +840,7 @@ label {
 }
 
 .modal input[type=checkbox] {
-    margin-top: 12px;
+    margin-top: 13px;
 }
 
 .modal .form-check-label {
@@ -901,7 +913,6 @@ label {
         font-size: 25px;
         margin-top: 10px;
     }
-
     .form-checkbox-select {
         flex-direction: column;
         padding: 20px 10px 10px 15px;
@@ -918,7 +929,7 @@ label {
         text-align: right;
         margin: 0;
         min-width: 100%;
-        padding: 10px 30px 6px 12px;
+        padding: 10px 30px 6px 13px;
     }
     ::ng-deep .p-inputMask {
         &.gv {
@@ -933,24 +944,24 @@ label {
                 }
             }
             input::-webkit-input-placeholder {
-                font-size: 12px !important;
-                font-weight: bold;
-                color: #fff
+                font-size: 13px !important;
+                color: #fff;
+                font-style: italic;
             }
             input:-moz-placeholder {
-                font-size: 12px !important;
-                font-weight: bold;
-                color: #fff
+                font-size: 13px !important;
+                color: #fff;
+                font-style: italic;
             }
             input::-moz-placeholder {
-                font-size: 12px !important;
-                font-weight: bold;
-                color: #fff
+                font-size: 13px !important;
+                color: #fff;
+                font-style: italic;
             }
             input:-ms-input-placeholder {
-                font-size: 12px !important;
-                font-weight: bold;
-                color: #fff
+                font-size: 13px !important;
+                color: #fff;
+                font-style: italic;
             }
         }
     }
@@ -987,33 +998,33 @@ label {
     /* Placeholder Dropdown */
     input::-webkit-input-placeholder {
         color: #fff !important;
-        font-size: 12px;
-        font-weight: bold;
+        font-size: 13px;
         text-align: right;
         padding-right: 0;
+        font-style: italic;
     }
     input:-moz-placeholder {
         /* Firefox 18- */
         color: #fff !important;
-        font-size: 12px;
-        font-weight: bold;
+        font-size: 13px;
         text-align: right;
         padding-right: 0;
+        font-style: italic;
     }
     input::-moz-placeholder {
         /* Firefox 19+ */
         color: #fff !important;
-        font-size: 12px;
-        font-weight: bold;
+        font-size: 13px;
         text-align: right;
         padding-right: 0;
+        font-style: italic;
     }
     input:-ms-input-placeholder {
         color: #fff !important;
-        font-size: 12px;
-        font-weight: bold;
+        font-size: 13px;
         text-align: right;
         padding-right: 0;
+        font-style: italic;
     }
     input[type=text],
     input[type=password],
@@ -1026,7 +1037,7 @@ label {
         text-align: right;
     }
     .input-group-text {
-        font-size: 14px;
+        font-size: 13px;
         font-weight: 400;
         line-height: 18px;
     }
@@ -1055,24 +1066,24 @@ label {
                 }
             }
             input::-webkit-input-placeholder {
-                font-size: 14px !important;
-                font-weight: bold;
-                color: #fff
+                font-size: 13px !important;
+                color: #fff;
+                font-style: italic;
             }
             input:-moz-placeholder {
-                font-size: 14px !important;
-                font-weight: bold;
-                color: #fff
+                font-size: 13px !important;
+                color: #fff;
+                font-style: italic;
             }
             input::-moz-placeholder {
-                font-size: 14px !important;
-                font-weight: bold;
-                color: #fff
+                font-size: 13px !important;
+                color: #fff;
+                font-style: italic;
             }
             input:-ms-input-placeholder {
-                font-size: 14px !important;
-                font-weight: bold;
-                color: #fff
+                font-size: 13px !important;
+                color: #fff;
+                font-style: italic;
             }
         }
     }
@@ -1123,7 +1134,6 @@ label {
         margin: auto;
     }
     #step3 h2 {
-        font-weight: bold;
         font-size: 44px;
         margin-bottom: 20px;
         padding: 0 34px;
@@ -1194,33 +1204,33 @@ label {
     /* Placeholder Dropdown */
     input::-webkit-input-placeholder {
         color: #fff !important;
-        font-size: 14px;
-        font-weight: bold;
+        font-size: 13px;
         text-align: left;
+        font-style: italic;
         padding-right: 0;
     }
     input:-moz-placeholder {
         /* Firefox 18- */
         color: #fff !important;
-        font-size: 14px;
-        font-weight: bold;
+        font-size: 13px;
         text-align: left;
         padding-right: 0;
+        font-style: italic;
     }
     input::-moz-placeholder {
         /* Firefox 19+ */
         color: #fff !important;
-        font-size: 14px;
-        font-weight: bold;
+        font-size: 13px;
         text-align: left;
         padding-right: 0;
+        font-style: italic;
     }
     input:-ms-input-placeholder {
         color: #fff !important;
-        font-size: 14px;
-        font-weight: bold;
+        font-size: 13px;
         text-align: left;
         padding-right: 0;
+        font-style: italic;
     }
 }
 
@@ -1284,20 +1294,28 @@ label {
 
 .form-talentos-globais input::-webkit-input-placeholder {
     color: #fff !important;
+    font-size: 13px;
+    font-style: italic;
 }
 
 .form-talentos-globais input:-moz-placeholder {
     /* Firefox 18- */
     color: #fff !important;
+    font-size: 13px;
+    font-style: italic;
 }
 
 .form-talentos-globais input::-moz-placeholder {
     /* Firefox 19+ */
     color: #fff !important;
+    font-size: 13px;
+    font-style: italic;
 }
 
 .form-talentos-globais input:-ms-input-placeholder {
     color: #fff !important;
+    font-size: 13px;
+    font-style: italic;
 }
 
 /* Inputs */
