--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -79,7 +79,7 @@
                 Ser aprovado na vaga
               </h3>
               <p class="lighter">
-                Depois do contato com a AIESEC que vai te receber, você é convidado a fechar a vaga para aquele projeto
+                Depois do contato com a AIESEC que vai te receber, você é convidado a fechar a vaga para aquele projeto, mediante o pagamento de uma taxa administrativa
               </p>
             </div>
           </div>
