--- a/src/app/landing-page-ge/landing-page-ge.component.html
+++ b/src/app/landing-page-ge/landing-page-ge.component.html
@@ -110,7 +110,7 @@
                 Ser aprovado na vaga
               </h3>
               <p class="lighter">
-                Depois do contato com a AIESEC que vai te receber, você é convidado a fechar a vaga para aquele projeto
+                Depois do contato com a AIESEC que vai te receber, você é convidado a fechar a vaga para aquele projeto, mediante o pagamento de uma taxa administrativa, mediante o pagamento de uma taxa administrativa
               </p>
             </div>
           </div>
