fix(menu and landing page gt): menu layout and gt content fixed

--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -97,7 +97,7 @@
                 Entrevistas para vagas que for selecionado
               </h3>
               <p class="lighter">
-                Você vai passar por algumas entrevists ao longo do processo para a vaga a qual você se candidatou
+                Você vai passar por algumas entrevistas ao longo do processo para a vaga a qual você se candidatou
               </p>
             </div>
           </div>
