--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -80,7 +80,7 @@
           <ul *ngIf="responsiveMenu" class='active-responsive-menu animated fadeIn faster' id="active-responsive-menu" (click)="toggleResponsiveMenu()">
             <div class="logo-menu" routerLink="/landing-page"></div>
             <li>
-              <span>Para jovens</span>
+              <span>Faça um intercâmbio</span>
               <ul class="animated fadeIn faster">
                 <li routerLink="/landing-page-gv" [ngx-scroll-to]="'#header-product'">
                   Voluntário Global
@@ -99,7 +99,7 @@
               </ul>
             </li>
             <li>
-              <span>Para organizações</span>
+              <span>Seja nosso Parceiro</span>
               <ul class="animated fadeIn faster">
                 <a href="http://aiesec.org.br/seja-parceiro/ong/">
                   <li>
