--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -30,6 +30,8 @@
 #header-product .container {
     z-index: 10;
     position: relative;
+    width: 95%;
+    max-width: -webkit-fill-available
 }
 
 .header-product {
@@ -94,14 +96,15 @@
                     color: #fff;
                 }
                 li {
-                    font-size: 12px;
-                    padding: 20px;
+                    font-size: 13px;
+                    padding: 12.5px 15px;
                     margin: 5px;
                     color: #fff;
                     text-transform: uppercase;
-                    font-weight: lighter;
+                    font-weight: 600;
                     position: relative;
                     cursor: pointer;
+                    white-space: nowrap;
                     &:hover ul {
                         display: block;
                     }
@@ -136,6 +139,17 @@
     }
 }
 
+@media (min-width: 990px) and (max-width: 1100px){
+    #header-product .container{
+        ul#menu {
+            li {
+                font-size:11px;
+                font-weight: 500;
+            }
+        }
+
+    }
+}
 @media (max-width: 990px) {
     .header-product div.responsive-menu ul#menu {
         display: none !important;
